--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-webserver": "^0.9.1",
     "phantomjs": "^1.9.17",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0"
