--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "flux-react": "^2.6.6",
+    "gulp-template": "^3.0.0",
     "lodash": "^3.10.1",
     "react": "^0.13.3"
   }
