--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "gulp-webserver": "^0.9.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.17",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0"
