--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "gulp-webserver": "^0.9.1",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.17",
+    "phantomjs-polyfill": "0.0.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0"
   },
