--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "flux-react": "^2.6.6",
     "gulp-template": "^3.0.0",
     "lodash": "^3.10.1",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-router": "^1.0.0-rc1"
   }
 }
