--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "flux-react": "^2.6.6",
     "gulp-template": "^3.0.0",
+    "history": "^1.9.0",
     "lodash": "^3.10.1",
+    "material-design-lite": "^1.0.4-2",
     "react": "^0.13.3",
     "react-router": "^1.0.0-rc1"
   }
