--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "babelify": "^6.1.3",
     "browserify": "^11.0.0",
+    "express": "^4.13.3",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -31,7 +32,8 @@
     "phantomjs": "^1.9.17",
     "phantomjs-polyfill": "0.0.1",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "watchify": "^3.3.0",
+    "yargs": "^3.24.0"
   },
   "dependencies": {
     "flux-react": "^2.6.6",
