--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "ISC",
   "devDependencies": {
     "babelify": "^6.1.3",
+    "body-parser": "^1.13.3",
     "browserify": "^11.0.0",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
@@ -24,6 +26,7 @@
     "gulp-watch": "^4.3.5",
     "gulp-webserver": "^0.9.1",
     "jasmine-core": "^2.3.4",
+    "jsonwebtoken": "^5.0.5",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
@@ -42,6 +45,7 @@
     "lodash": "^3.10.1",
     "material-design-lite": "^1.0.4-2",
     "react": "^0.13.3",
-    "react-router": "^1.0.0-rc1"
+    "react-router": "^1.0.0-rc1",
+    "request": "^2.61.0"
   }
 }
