--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "React application boilerplate",
   "author": "Christian Alfoni",
   "license": "ISC",
+  "scripts": {
+    "start": "node web.js"
+  },
   "devDependencies": {
     "babelify": "^6.1.3",
     "body-parser": "^1.13.3",
