--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
     "gulp-react-templates": "^0.1.0",
+    "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.4.2",
     "gulp-streamify": "0.0.5",
+    "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "gulp-webserver": "^0.9.1",
-    "gulp-template": "^3.0.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
